--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
+    "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
     "next": "12.3.0",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "sass": "^1.54.9"
   },
