--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
+    "graphql": "^16.6.0",
     "next": "12.3.0",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
+    "react-18-image-lightbox": "^5.1.4",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "sass": "^1.54.9"
