--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.6.9",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "disqus-react": "^1.1.3",
     "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
     "graphql": "^16.6.0",
