--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@fseehawer/react-circular-slider": "^2.5.9",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "disqus-react": "^1.1.3",
@@ -24,6 +25,7 @@
     "react-18-image-lightbox": "^5.1.4",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-toggle-dark-mode": "^1.1.0",
     "sass": "^1.54.9"
   },
   "devDependencies": {
