--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.6.0",
     "next": "12.3.0",
     "next-pwa": "^5.6.0",
+    "rc-slider": "^10.0.1",
     "react": "18.2.0",
     "react-18-image-lightbox": "^5.1.4",
     "react-bootstrap": "^2.5.0",
