--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
     "graphql": "^16.6.0",
+    "mdi-react": "^9.0.0",
     "next": "12.3.0",
     "next-pwa": "^5.6.0",
     "rc-slider": "^10.0.1",
